package behavioral.observer.streamData_CA1;

public interface Listener<T> {
    void listen(T t);
}
